tests/fixtures/invalid/dict_mod_none.py
# Cannot modulo Dict[str, int] and None
x: dict[str, int] = {"a": 1} % None
